syntax = "proto3";

package blk;

option go_package = "blk";

message TxIssue {
    bytes to_addr = 1;
    uint64 amount =2;
}